Fixed last couple of bugs

--- a/views/index.html
+++ b/views/index.html
@@ -26,6 +26,10 @@
         <input type="submit" value="Submit" />
       </form>
       <p>
+        <strong>GET all users</strong>
+        <code>GET <a href="/api/users/" target="_blank">/api/users/</a></code>
+      </p>
+      <p>
         <strong>GET user's exercise log: </strong>
         <code>GET /api/users/:_id/logs?[from][&amp;to][&amp;limit]</code>
       </p>
